Results from the embeddings; more complete results page

--- a/scraper/Development.ipynb
+++ b/scraper/Development.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "from os import path\n",
     "\n",
     "import numpy as np\n",
-    "# import json\n"
+    "import random\n",
+    "import json\n"
    ]
   },
   {
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -303,11 +304,12 @@
      "output_type": "stream",
      "text": [
       "Adding guitars to the database\n",
+      "WARNING:tensorflow:Please fix your imports. Module tensorflow.python.training.tracking.data_structures has been moved to tensorflow.python.trackable.data_structures. The old module will be deleted in version 2.11.\n",
       "[--------------------]   6581/6582\n",
       "\n",
       "Upload Statistics:\n",
-      "\t305 Guitars added\n",
-      "\t1096 Guitars were already in the database\n",
+      "\t1238 Guitars added\n",
+      "\t163 Guitars were already in the database\n",
       "\t5181 html files were missing\n",
       "\t0 attempts failed for unknown reasons\n"
      ]
@@ -321,6 +323,7 @@
     "fail_list = []\n",
     "\n",
     "\n",
+    "BERT_model = scrape_utils.BERT_embed_model()\n",
     "status_steps = np.ceil(len(url_list)/20)\n",
     "for i_url,url in enumerate(url_list):\n",
     "\n",
@@ -335,21 +338,21 @@
     "            html = file.read()\n",
     "\n",
     "        reviews = scrape_utils.gc_extract_review_info(html) # parse the review info\n",
-    "        guitar = scrape_utils.gc_extract_guitar_info(url, html) # parse the specs for the guitar\n",
+    "        guitar = scrape_utils.gc_extract_guitar_info(url, html, BERT_model=BERT_model) # parse the specs for the guitar\n",
     "        # print(guitar.scale_length)\n",
     "\n",
     "        if len(client.query(\"SELECT Guitar filter .model = <str>$model\", model=guitar.model)) == 0:\n",
-    "            try:\n",
-    "                guitar_id = guitar.insert(client) # insert the guitar, get the uuid\n",
+    "            # try:\n",
+    "            guitar_id = guitar.insert(client) # insert the guitar, get the uuid\n",
     "\n",
-    "                for review in reviews: # insert all reviews\n",
-    "                    review.insert(guitar_id, client)\n",
+    "            for review in reviews: # insert all reviews\n",
+    "                review.insert(guitar_id, client)\n",
     "                \n",
-    "                add_list.append(url) # keep track of what has been added\n",
+    "            add_list.append(url) # keep track of what has been added\n",
     "\n",
-    "            except:\n",
+    "            # except:\n",
     "                # print(f'Could not insert guitar {guitar.model}')\n",
-    "                fail_list.append(url)\n",
+    "                # fail_list.append(url)\n",
     "        else:\n",
     "            skip_list.append(url)\n",
     "\n",
@@ -371,64 +374,166 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guitar_description = client.query('''\n",
-    "            SELECT Guitar.description\n",
-    "            OFFSET 30 LIMIT 1\n",
-    "    ''')"
+    "with edgedb.create_client('MSDS_459') as client:\n",
+    "    num_gs = client.query('SELECT count(Guitar);')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "guitar_description"
+    "with edgedb.create_client('MSDS_459') as client:\n",
+    "    # randomly choose an offset\n",
+    "    num_gs = client.query('SELECT count(Guitar);')[0]\n",
+    "    offset_gs = random.randint(0,num_gs-201)\n",
+    "    \n",
+    "    # Get a random subset of embeddings\n",
+    "    embeds = client.query(f'SELECT Guitar {{ embedding, id }} OFFSET {offset_gs} limit 200;')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 91ms/step\n"
+     ]
+    }
+   ],
    "source": [
-    "BERT_model = scrape_utils.BERT_embed_model()"
+    "embedding = BERT_model.predict([guitar.description])['encoder_outputs'][0]\n",
+    "\n",
+    "dist = np.ndarray([200,])\n",
+    "for i_embed,embed in enumerate(embeds):\n",
+    "    dist[i_embed] = np.linalg.norm(np.array(json.loads(embed.embedding))-embedding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_test = BERT_model.predict(guitar_description)"
+    "closest_inds = np.argsort(dist)[0:5] # get the five closest\n",
+    "\n",
+    "# create the query. I'm sure I could use arrays here.\n",
+    "sql_query = '''SELECT Guitar { model, brand: {name}, description}\n",
+    "                FILTER .id in \n",
+    "                {  <uuid>$id0, <uuid>$id1, <uuid>$id2, <uuid>$id3, <uuid>$id4}'''\n",
+    "\n",
+    "guitars = client.query(sql_query,\\\n",
+    "                    id0=embeds[closest_inds[0]].id,\\\n",
+    "                    id1=embeds[closest_inds[1]].id,\\\n",
+    "                    id2=embeds[closest_inds[2]].id,\\\n",
+    "                    id3=embeds[closest_inds[3]].id,\\\n",
+    "                    id4=embeds[closest_inds[4]].id )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([110, 144,  87, 162, 121], dtype=int64)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "out_test['encoder_outputs'][0].tolist()"
+    "np.argsort(dist)[0:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['embedding', 'id']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "out_test['encoder_outputs'][0]"
+    "dir(embeds[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT Guitar { model, brand, description}\n",
+      "        FILTER .id in { e3f46c76-c12a-11ed-ad19-4f5fb29004f2 }\n"
+     ]
+    }
+   ],
    "source": [
-    "len(np.array([]))"
+    "print(sql_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(guitars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'ident'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\17204\\Documents\\git\\MSDS459_project\\scraper\\Development.ipynb Cell 25\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X44sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m guitar \u001b[39min\u001b[39;00m guitars:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X44sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m \u001b[39mdir\u001b[39m(guitar):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/17204/Documents/git/MSDS459_project/scraper/Development.ipynb#X44sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         \u001b[39mprint\u001b[39m(key\u001b[39m.\u001b[39;49mident)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'ident'"
+     ]
+    }
+   ],
+   "source": [
+    "for guitar in guitars:\n",
+    "    for key in guitar:\n",
+    "        print(key)"
    ]
   },
   {
